# Oslo

./: .gitignore  CLAUDE.md  LICENSE  README.md  RESEARCH_PROJECT_TRANSFORMATION_PLAN.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: ARCHITECTURE.md  FUTURE_FEATURES.md  OPTIMIZATIONS.md
examples/: __init__.py  basic_usage.py  pipecat_integration.py
oslo/: __init__.py  cli.py  config.py
oslo/audio/: __init__.py  processor.py
oslo/processing/: __init__.py  batcher.py  parallel.py
oslo/transcription/: __init__.py  model.py  moonshine_voice.py
oslo/translation/: __init__.py  groq_client.py
tests/: __init__.py  test_audio_processor.py  test_integration.py  test_parallel_processor.py
